create new post form

--- a/public/templates/posts.html
+++ b/public/templates/posts.html
@@ -1,6 +1,6 @@
 <div class="col-md-9 col-md-offset-1">
   <div class="row">
-    <h2>Sections</h2>
+    <h2>Postings</h2>
   </div>
   <div class="row">
     <div class="col-md-4 row" ng-repeat="section in topSections">
