view posts in /posts

--- a/public/templates/add.html
+++ b/public/templates/add.html
@@ -40,28 +40,36 @@
     </div>
     <div class="row">
       <h4>Item Details</h4>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <fieldset class="form-group">
           <label for="price">Price</label>
           <input type="text" class="form-control" id="price" placeholder="Asking price" ng-model="formData.price" aria-describedby="price">
         </fieldset>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <fieldset class="form-group">
           <label for="condition">Condition</label>
           <input type="text" class="form-control" id="condition" placeholder="Condition of the item" ng-model="formData.condition" aria-describedby="condition">
         </fieldset>
       </div>
-      <div class="col-md-3">
+    </div>
+    <div class="row">
+      <div class="col-md-4">
         <fieldset class="form-group">
           <label for="make">Make/Manufacturer</label>
           <input type="text" class="form-control" id="make" placeholder="Make/Manufacturer of the item" ng-model="formData.make" aria-describedby="make">
         </fieldset>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <fieldset class="form-group">
           <label for="size">Size</label>
           <input type="text" class="form-control" id="size" placeholder="Size of the item" ng-model="formData.size" aria-describedby="size">
+        </fieldset>
+      </div>
+      <div class="col-md-4">
+        <fieldset class="form-group">
+          <label for="color">Color</label>
+          <input type="text" class="form-control" id="color" placeholder="Color of the item" ng-model="formData.color" aria-describedby="color">
         </fieldset>
       </div>
     </div>
@@ -71,10 +79,6 @@
         <fieldset class="form-group">
           <label for="title">Title</label>
           <input type="text" class="form-control" id="title" placeholder="Title" ng-model="formData.title" aria-describedby="title" required>
-        </fieldset>
-        <fieldset class="form-group">
-          <label for="color">Color</label>
-          <input type="text" class="form-control" id="color" placeholder="Color of the item" ng-model="formData.color" aria-describedby="color">
         </fieldset>
         <fieldset class="form-group">
           <label for="posting">Posting</label>
