--- a/public/templates/posts.html
+++ b/public/templates/posts.html
@@ -3,21 +3,9 @@
     <h2>Postings</h2>
   </div>
   <div class="row">
-    <div class="col-md-4 row" ng-repeat="section in topSections">
-      <h4>{{section.name}}</h4>
-      <ul ng-repeat="sub in section.subs">
-        <li><a href="{{sub.link}}">{{ sub.name }}</a></li>
-      </ul>
-      <br>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4 row" ng-repeat="section in bottomSections">
-      <h4>{{section.name}}</h4>
-      <ul ng-repeat="sub in section.subs">
-        <li><a href="{{sub.link}}">{{ sub.name }}</a></li>
-      </ul>
-      <br>
+    <div class="col-md-12 row" ng-repeat="post in posts">
+      <h5>{{post.updated_at | date: 'medium'}} - {{post.title}}</h5>
+      <p>{{post.posting}}</p>
     </div>
   </div>
 </div>
