--- a/public/templates/posts.html
+++ b/public/templates/posts.html
@@ -1,9 +1,5 @@
 <div class="row">
-  <h2 class="pull-left">Postings</h2>
-</div>
-<div class="row">
   <div class="col-md-12 row" ng-repeat="post in posts | orderBy:'-updated_at' | filter:query">
-    <h5>{{post.updated_at | date: 'medium'}} - {{post.title}} - {{post.city}}</h5>
-    <p>{{post.posting}}</p>
+    <p>{{post.updated_at | date: 'MMM d'}} - <a href="#posts/{{post._id}}" class="post-title">{{post.title}}</a> - ({{post.city}})</p>
   </div>
 </div>
